More work an admin theme

--- a/src/Presentation/SmartStore.Web/Administration/Content/shared/_modal.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/shared/_modal.scss
@@ -79,4 +79,9 @@
         max-width: 100%;
         min-height: 1px;
     }
+
+    .modal-flex-fill-area {
+        min-height: 100%;
+        flex: 1;
+    }
 }
