--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Promotion.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Promotion.cshtml
@@ -48,12 +48,14 @@
             </tr>
             <tr>
                 <td>
-                    <button type="button" id="AddRelatedProductButton" class="btn btn-warning btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
-                        <i class="fa fa-plus"></i>
-                        @T("Admin.Catalog.Products.RelatedProducts.AddNew")
-                    </button>
+					@(Html.SmartStore().EntityPicker()
+						.IconCssClass("fa fa-plus")
+						.HtmlAttribute("class", "btn btn-warning")
+						.DialogTitle(T("Admin.Catalog.Products.RelatedProducts.AddNew"))
+						.Caption(T("Common.AddNew"))
+						.OnSelectionCompleted("PickRelatedProducts_Completed"))
 
-					<button type="button" id="btnCreateMutuallyRelatedProducts" class="btn btn-below" data-url="@Url.Action("CreateAllMutuallyRelatedProducts", new { productId = Model.Id })"
+					<button type="button" id="btnCreateMutuallyRelatedProducts" class="btn btn-secondary btn-below" data-url="@Url.Action("CreateAllMutuallyRelatedProducts", new { productId = Model.Id })"
 							data-ask="@T("Admin.Common.AskCreateMutuallyAssociations")">
 						<i class="fa fa-random"></i>
 						@T("Admin.Common.CreateMutuallyAssociations")
@@ -112,12 +114,14 @@
             </tr>
             <tr>
                 <td>
-					<button type="button" id="AddCrossSellProductButton" class="btn btn-warning btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
-						<i class="fa fa-plus"></i>
-						@T("Admin.Catalog.Products.CrossSells.AddNew")
-					</button>
+					@(Html.SmartStore().EntityPicker() 
+						.IconCssClass("fa fa-plus")
+						.HtmlAttribute("class", "btn btn-warning")
+						.DialogTitle(T("Common.AddNew"))
+						.Caption(T("Admin.Catalog.Products.CrossSells.AddNew"))
+						.OnSelectionCompleted("PickCrossSellProducts_Completed"))
 
-					<button type="button" id="btnCreateMutuallyCrossSellProducts" class="btn btn-below" data-url="@Url.Action("CreateAllMutuallyCrossSellProducts", new { productId = Model.Id })"
+					<button type="button" id="btnCreateMutuallyCrossSellProducts" class="btn btn-secondary btn-below" data-url="@Url.Action("CreateAllMutuallyCrossSellProducts", new { productId = Model.Id })"
 							data-ask="@T("Admin.Common.AskCreateMutuallyAssociations")">
 						<i class="fa fa-random"></i>
 						@T("Admin.Common.CreateMutuallyAssociations")
@@ -134,8 +138,32 @@
     }
 </div>
 
-<script type="text/javascript">
-	$(document).ready(function () {
+<script>
+	function PickRelatedProducts_Completed(ids) {
+		$({}).doAjax({
+			type: 'POST',
+			url: '@Url.Action("RelatedProductAdd")',
+			data: { "productId": @Model.Id, "selectedProductIds": ids },
+			callbackSuccess: function () {
+				$('#relatedproducts-grid').data('tGrid').ajaxRequest();
+			}
+		});
+		return true;
+	}
+
+	function PickCrossSellProducts_Completed(ids) {
+		$({}).doAjax({
+			type: 'POST',
+			url: '@Url.Action("CrossSellProductAdd")',
+			data: { "productId": @Model.Id, "selectedProductIds": ids },
+			callbackSuccess: function () {
+				$('#crosssellproducts-grid').data('tGrid').ajaxRequest();
+			}
+		});
+		return true;
+	}
+
+	$(function() {
 		// mutually create related or cross sell products
 		$('#btnCreateMutuallyRelatedProducts, #btnCreateMutuallyCrossSellProducts').click(function () {
 			$(this).doAjax({
@@ -144,56 +172,5 @@
 				}
 			});
 		});
-
-		// add related products
-		$(document).on('click', '#AddRelatedProductButton', function () {
-			$({}).entityPicker('loadDialog', {
-				url: '@Url.Action("Picker", "Entity", new { area = "" })',
-				caption: '@T("Admin.Catalog.Products.RelatedProducts.AddNew")',
-				onLoadDialogBefore: function () {
-					$('#AddRelatedProductButton').button('loading').prop('disabled', true);
-				},
-				onLoadDialogComplete: function () {
-					$('#AddRelatedProductButton').prop('disabled', false).button('reset');
-				},
-				onOkClicked: function (ids) {
-					$({}).doAjax({
-						type: 'POST',
-						url: '@Url.Action("RelatedProductAdd")',
-						data: { "productId": @Model.Id, "selectedProductIds": ids },
-						callbackSuccess: function () {
-							$('#relatedproducts-grid').data('tGrid').ajaxRequest();
-						}
-					});
-					return true;
-				}
-			});
-		});
-
-		// add cross sell products
-		$(document).on('click', '#AddCrossSellProductButton', function () {
-			$({}).entityPicker('loadDialog', {
-				url: '@Url.Action("Picker", "Entity", new { area = "" })',
-				caption: '@T("Admin.Catalog.Products.CrossSells.AddNew")',
-				onLoadDialogBefore: function () {
-					$('#AddCrossSellProductButton').button('loading').prop('disabled', true);
-				},
-				onLoadDialogComplete: function () {
-					$('#AddCrossSellProductButton').prop('disabled', false).button('reset');
-				},
-				onOkClicked: function (ids) {
-					$({}).doAjax({
-						type: 'POST',
-						url: '@Url.Action("CrossSellProductAdd")',
-						data: { "productId": @Model.Id, "selectedProductIds": ids },
-						callbackSuccess: function () {
-							$('#crosssellproducts-grid').data('tGrid').ajaxRequest();
-						}
-					});
-					return true;
-				}
-			});
-		});
-
 	});
 </script>
