--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -48,18 +48,19 @@
 				onLoadDialogComplete: function () {
 					$('#AddProductLinkageButton').prop('disabled', false).button('reset');
 				},
-				onOkClicked: function (ids) {
-					var dialog = $('#entity-picker-product-dialog'),
-						item = dialog.find('.entity-picker-list .selected').first();
-
-					$('#linked-product-name').html(item.find('.title').attr('title'));
-
+				onOkClicked: function (ids, selectedItems) {
+					$('#linked-product-name').html(selectedItems[0].name);
 					return true;
 				}
 			});
 		});
 
 	});
+
+	function PickLinkedProduct_Completed(ids, selectedItems, dialog) {
+		$('#linked-product-name').html(selectedItems[0].name);
+		return true;
+	}
 
 	function toggleLinkageButtons() {
 		var unlinked = ($('#@Html.FieldIdFor(model => model.LinkedProductId)').val() === '0');
@@ -86,14 +87,26 @@
 			@Html.HiddenFor(model => model.LinkedProductId)
 			<div id="linked-product-name">@Model.LinkedProductName</div>
 
-			<button type="button" id="RemoveProductLinkageButton" class="btn btn-below">
-				<i class="fa fa-times"></i>&nbsp;@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")
+			<button type="button" id="RemoveProductLinkageButton" class="btn btn-secondary btn-below">
+				<i class="fa fa-times"></i>
+				<span>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")</span>
 			</button>
 
 			<button type="button" id="AddProductLinkageButton" class="btn btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
 				<i class="fa fa-link"></i>
 				@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct")
 			</button>
+
+			@(Html.SmartStore().EntityPicker()
+				.For(x => x.LinkedProductId)
+				.IconCssClass("fa fa-link")
+				.HtmlAttribute("class", "btn btn-secondary")
+				.MaxItems(1)
+				.AppendMode(false)
+				.DisabledEntityIds(Model.ProductId)
+				.DialogTitle(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.Fields.LinkedProduct.AddNew"))
+				.Caption(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct"))
+				.OnSelectionCompleted("PickLinkedProduct_Completed"))
 
             @Html.ValidationMessageFor(model => model.LinkedProductId)
         </td>
