--- a/src/Plugins/SmartStore.DiscountRules/Views/DiscountRules/HasAllProducts.cshtml
+++ b/src/Plugins/SmartStore.DiscountRules/Views/DiscountRules/HasAllProducts.cshtml
@@ -16,13 +16,17 @@
 				 data-fail-msg='@T("Admin.Promotions.Discounts.Requirements.FailedToSave").Text.EncodeJsString()'
 				 data-success-msg='@T("Admin.Promotions.Discounts.Requirements.Saved").Text.EncodeJsString()'>
 				<div>
-					@Html.TextBoxFor(model => model.Products, new { data_routeparam = "productIds" })
+					<div class="input-group">
+						@Html.TextBoxFor(model => model.Products, new { data_routeparam = "productIds" })
+						<span class="input-group-btn">
+							@(Html.SmartStore().EntityPicker()
+								.For(x => x.Products)
+								.DialogTitle(T("lugins.DiscountRules.HasAllProducts.Fields.Products"))
+								.Caption(T("Admin.Common.Search")))
+						</span>
+					</div>
 
-					<button type="button" class="btn" id="SearchRequiredProductsButton" data-loading-text="@(T("Common.Loading"))&hellip;">
-						<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
-					</button>
-
-					<button type="button" class="btn btn-save-discount-rule">
+					<button type="button" class="btn btn-primary btn-save-discount-rule">
 						<i class="fa fa-check"></i>
 						@T("Admin.Common.Save")
 					</button>
@@ -31,24 +35,3 @@
 		</td>
     </tr>
 </table>
-
-<script type="text/javascript">
-	$(document).ready(function () {
-
-		// add required products
-		$(document).on('click', '#SearchRequiredProductsButton', function () {
-			$('#@(Html.FieldIdFor(x => x.Products))').entityPicker('loadDialog', {
-				url: '@Url.Action("Picker", "Entity", new { area = "" })',
-				caption: '@T("Plugins.DiscountRules.HasAllProducts.Fields.Products")',
-				returnValueDelimiter: ',',
-				onLoadDialogBefore: function () {
-					$('#SearchRequiredProductsButton').button('loading').prop('disabled', true);
-				},
-				onLoadDialogComplete: function () {
-					$('#SearchRequiredProductsButton').prop('disabled', false).button('reset');
-				}
-			});
-		});
-
-    });
-</script>
