--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -441,10 +441,11 @@
             </tr>
             <tr>
                 <td>
-					<button type="button" id="AddNewProductButton" class="btn btn-warning btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
-						<i class="fa fa-plus"></i>
-						@T("Admin.Catalog.Categories.Products.AddNew")
-					</button>
+					@(Html.SmartStore().EntityPicker()
+						.IconCssClass("fa fa-plus")
+						.HtmlAttribute("class", "btn btn-warning")
+						.Caption(T("Admin.Catalog.Categories.Products.AddNew"))
+						.OnSelectionCompleted("PickProducts_Completed"))
                 </td>
             </tr>
         </table>
@@ -582,9 +583,8 @@
     </table>
 }
 
-<script type="text/javascript">
-	$(document).ready(function () {
-
+<script>
+	$(function () {
 	    $("#@Html.FieldIdFor(model => model.AllowCustomersToSelectPageSize)").change(togglePageSize);
 	    togglePageSize();
 	
@@ -602,36 +602,21 @@
 		$('button.description-toggle-button').click(function() {
 			$('table').find('.description-container').toggle();
 		});
-
-		// add new product
-		$(document).on('click', '#AddNewProductButton', function () {
-			$({}).entityPicker('loadDialog', {
-				url: '@Url.Action("Picker", "Entity", new { area = "" })',
-				caption: '@T("Admin.Catalog.Categories.Products.AddNew")',
-				onLoadDialogBefore: function () {
-					$('#AddNewProductButton').button('loading').prop('disabled', true);
-				},
-				onLoadDialogComplete: function () {
-					$('#AddNewProductButton').prop('disabled', false).button('reset');
-				},
-				onOkClicked: function (ids) {
-					$({}).doAjax({
-						type: 'POST',
-						url: '@Url.Action("ProductAdd")',
-						data: { "categoryId": @Model.Id, "selectedProductIds": ids },
-						callbackSuccess: function () {
-							$('#products-grid').data('tGrid').ajaxRequest();
-						}
-					});
-					return true;
-				}
-			});
-		});
-
 	});
 
-    function togglePageSize() {
+	function PickProducts_Completed(ids) {
+		$({}).doAjax({
+			type: 'POST',
+			url: '@Url.Action("ProductAdd")',
+			data: { "categoryId": @Model.Id, "selectedProductIds": ids },
+			callbackSuccess: function () {
+				$('#products-grid').data('tGrid').ajaxRequest();
+			}
+		});
+		return true;
+	}
 
+    function togglePageSize() {
         var isEnabled = $('#@Html.FieldIdFor(model => model.AllowCustomersToSelectPageSize)').val();
 
         if (isEnabled != "false") {
