--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -7,8 +7,7 @@
 @Html.HiddenFor(model => model.ProductVariantAttributeId)
 
 <script type="text/javascript">
-	$(document).ready(function () {
-
+	$(function () {
 		$('#@Html.FieldIdFor(model => model.ValueTypeId)').change(function () {
 			var selectedValueTypeId = $('#@Html.FieldIdFor(model => model.ValueTypeId)').val();
 
@@ -26,39 +25,17 @@
 			}
 		}).trigger('change');
 
-		$('#RemoveProductLinkageButton').click(function () {
-			$('#linked-product-name').empty();
+		$('#RemoveProductLinkageButton').on('click', function () {
+			$('#linked-product-name').val('');
 			$('#@Html.FieldIdFor(model => model.LinkedProductId)').val('0');
 			toggleLinkageButtons();
 		});
 
 		toggleLinkageButtons();
-
-		// add product linkage
-		$(document).on('click', '#AddProductLinkageButton', function () {
-			$('#@(Html.FieldIdFor(x => x.LinkedProductId))').entityPicker('loadDialog', {
-				url: '@Url.Action("Picker", "Entity", new { area = "" })',
-				caption: '@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.Fields.LinkedProduct.AddNew")',
-				maxReturnValues: 1,
-				appendValue: false,
-				disableIds: '@Model.ProductId',
-				onLoadDialogBefore: function () {
-					$('#AddProductLinkageButton').button('loading').prop('disabled', true);
-				},
-				onLoadDialogComplete: function () {
-					$('#AddProductLinkageButton').prop('disabled', false).button('reset');
-				},
-				onOkClicked: function (ids, selectedItems) {
-					$('#linked-product-name').html(selectedItems[0].name);
-					return true;
-				}
-			});
-		});
-
 	});
 
 	function PickLinkedProduct_Completed(ids, selectedItems, dialog) {
-		$('#linked-product-name').html(selectedItems[0].name);
+		$('#linked-product-name').val(selectedItems[0].name);
 		return true;
 	}
 
@@ -85,28 +62,27 @@
         </td>
         <td class="adminData">
 			@Html.HiddenFor(model => model.LinkedProductId)
-			<div id="linked-product-name">@Model.LinkedProductName</div>
 
-			<button type="button" id="RemoveProductLinkageButton" class="btn btn-secondary btn-below">
-				<i class="fa fa-times"></i>
-				<span>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")</span>
-			</button>
-
-			<button type="button" id="AddProductLinkageButton" class="btn btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
-				<i class="fa fa-link"></i>
-				@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct")
-			</button>
-
-			@(Html.SmartStore().EntityPicker()
-				.For(x => x.LinkedProductId)
-				.IconCssClass("fa fa-link")
-				.HtmlAttribute("class", "btn btn-secondary")
-				.MaxItems(1)
-				.AppendMode(false)
-				.DisabledEntityIds(Model.ProductId)
-				.DialogTitle(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.Fields.LinkedProduct.AddNew"))
-				.Caption(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct"))
-				.OnSelectionCompleted("PickLinkedProduct_Completed"))
+			<div class="input-group">
+				<input type="text" class="form-control" id="linked-product-name" placeholder="@T("Common.Unspecified")" value="@Model.LinkedProductName" readonly>
+				<span class="input-group-btn">
+					<button type="button" id="RemoveProductLinkageButton" class="btn btn-secondary">
+						<i class="fa fa-times"></i>
+						<span>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")</span>
+					</button>
+					@(Html.SmartStore().EntityPicker()
+						.For(x => x.LinkedProductId)
+						.IconCssClass("fa fa-link")
+						.HtmlAttribute("class", "btn btn-secondary")
+						.HtmlAttribute("id", "AddProductLinkageButton")
+						.MaxItems(1)
+						.AppendMode(false)
+						.DisabledEntityIds(Model.ProductId)
+						.DialogTitle(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.Fields.LinkedProduct.AddNew"))
+						.Caption(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.LinkProduct"))
+						.OnSelectionCompleted("PickLinkedProduct_Completed"))
+				</span>
+			</div>
 
             @Html.ValidationMessageFor(model => model.LinkedProductId)
         </td>
