--- a/src/Presentation/SmartStore.Web/Views/Entity/Partials/Picker.List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Entity/Partials/Picker.List.cshtml
@@ -17,7 +17,7 @@
 @foreach (var item in Model.SearchResult ?? Enumerable.Empty<EntityPickerModel.SearchResultModel>())
 {
 	<div class="col-xl-3 col-lg-4 col-sm-6">
-        <div class="row flex-nowrap sm-gutters py-2 my-1 entpicker-item@(item.Disable ? " disabled" : "")" data-id="@item.Id" data-returnvalue="@item.ReturnValue">
+        <div class="row flex-nowrap sm-gutters py-2 my-1 entpicker-item@(item.Disable ? " disabled" : "")@(item.Selected ? " selected" : "")" data-id="@item.Id" data-returnvalue="@item.ReturnValue">
 			<div class="col-auto">
 				<div class="entpicker-thumb">
 					@if (item.ImageUrl.HasValue())
