--- a/src/Presentation/SmartStore.Web/Views/Customer/Avatar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Avatar.cshtml
@@ -101,7 +101,7 @@
         });
 
         elRemove.click(function (e) {
-            img.attr('src', '@pictureService.GetDefaultPictureUrl()');
+            img.attr('src', '@pictureService.GetFallbackPictureUrl()');
             elHidden.val(0);
             $(this).hide();
             e.preventDefault();
