--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -115,7 +115,7 @@
         });
 
         elRemove.click(function (e) {
-            img.attr('src', '@pictureService.GetFallbackPictureUrl(mediaSettings.ProductThumbPictureSize)');
+            img.attr('src', '@pictureService.GetFallbackUrl(mediaSettings.ProductThumbPictureSize)');
             elHidden.val(0);
             $(this).hide();
             e.preventDefault();
