--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -11,9 +11,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@ILS.GetResource("Title")</title>
-    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-    
+	<meta http-equiv="Content-type" content="utf-8" />
+	<title>@ILS.GetResource("Title")</title>
+
     <script>
         window.Res = {
             "Common.Notification": "@ILS.GetResource("Common.Notification").EncodeJsString()",
