--- a/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
@@ -21,8 +21,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-type" content="utf-8">
 	<title>Internal Server Error</title>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<style type="text/css">
         body {
             font-family: Arial, Helvetica, sans-serif;
