--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Print.cshtml
@@ -7,9 +7,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-type" content="utf-8">
 	<title>@Html.SmartTitle(false)</title>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-	
 	<link rel="stylesheet" type="text/css" href="~/Content/print.css" />
 
 	@Html.SmartCssFiles(this.Url, ResourceLocation.Head)
