--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -11,7 +11,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-type" content="utf-8" />
+	<meta charset="utf-8">
 	<title>@ILS.GetResource("Title")</title>
 
     <script>
