--- a/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
@@ -21,7 +21,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-type" content="utf-8">
+	<meta charset="utf-8">
 	<title>Internal Server Error</title>
 	<style type="text/css">
         body {
