--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -86,7 +86,7 @@
 <!DOCTYPE html>
 <html lang="@this.WorkContext.WorkingLanguage.UniqueSeoCode">
 <head>
-	<meta http-equiv="Content-type" content="utf-8" />
+	<meta charset="utf-8">
 	<title itemprop="name">@Html.SmartTitle(true)</title>
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
