--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Print.cshtml
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-type" content="utf-8">
+	<meta charset="utf-8">
 	<title>@Html.SmartTitle(false)</title>
 	<link rel="stylesheet" type="text/css" href="~/Content/print.css" />
 
