New setting MediaSettings.AutoGenerateAbsoluteUrls: prepends current host name to media file's relative URL, but not if a CDN URL has been applied to the store already.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -20,7 +20,16 @@
     @Html.ValidationSummary(false)
 
     <table class="adminContent">
-        <tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.AutoGenerateAbsoluteUrls)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.AutoGenerateAbsoluteUrls)
+				@Html.ValidationMessageFor(model => model.AutoGenerateAbsoluteUrls)
+			</td>
+		</tr>
+		<tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AvatarPictureSize)
             </td>
